<resources>
    <string name="app_name">Mari Sehat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Halo, Selamat Datang</string>
    <string name="booking_dokter">Booking Dokter</string>
    <string name="artikel_kesehatan">Artikel Kesehatan</string>
    <string name="nutrisi_makanan">Nutrisi Makanan</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="weight">Weight</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="pilih_spesialisasi">Pilih Spesialisasi</string>
    <string name="sp_gigi">Sp. Gigi</string>
    <string name="dokter_n_umum">Dokter Umum</string>
    <string name="sp_anak">Sp. Anak</string>
    <string name="sp_mata">Sp. Mata</string>
    <string name="biaya_konsulatasi">Biaya Konsulatasi</string>
    <string name="menampilkan_list_dokter_gigi">Menampilkan List Dokter Gigi</string>
    <string name="pilih_dokter">Pilih Dokter</string>
    <string name="tentukan_jadwal_waktu_booking"><![CDATA[Tentukan Jadwal & Waktu Booking]]></string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="isi_biodata_pasien">Isi Biodata Pasien</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="deskripsikan_keluhan">Deskripsikan Keluhan</string>
    <string name="selamat_kamu_n_berhasil_booking_dokter">Selamat Kamu \n Berhasil Booking Dokter</string>
    <string name="kembali_ke_beranda">Kembali Ke Beranda</string>

    <array name="location">
        <item>Jakarta</item>
        <item>Bekasi</item>
        <item>Tanggerang</item>
        <item>Depok</item>
        <item>Bogor</item>
    </array>

    <string-array name="dokter_gigi_names">
        <item>drg. Aan Afrianto</item>
        <item>drg. Aan Midad Arrizza</item>
        <item>drg. Abimanyu Bijaksono</item>
        <item>drg. Achmad Fanfani</item>
        <item>drg. Ade Chandra</item>
    </string-array>

    <string-array name="rs_names">
        <item>RSIA Tambak, Jakpus, Menteng</item>
        <item>RS Medika Permata Hijau, Kebon Jeruk, Jakbar</item>
        <item>Siloam Clinic Sunter, Tanjung priok, Jakut</item>
        <item>RS EMC Pulomas, Pulo Gadung, Jaktim</item>
        <item>Dent Smile Duren Sawit, Duren Sawit, Jaktim</item>
    </string-array>

    <string-array name="prices">
        <item>Rp. 50.000</item>
        <item>Rp. 100.000</item>
        <item>Rp. 70.000</item>
        <item>Rp. 80.000</item>
        <item>Rp. 160.000</item>
    </string-array>

    <string-array name="experiences">
        <item>2 Tahun</item>
        <item>3 Tahun</item>
        <item>4 Tahun</item>
        <item>3 Tahun</item>
        <item>4 Tahun</item>
    </string-array>

    <string-array name="distance">
        <item>2.2 km</item>
        <item>3.5 km</item>
        <item>4 km</item>
        <item>9 km</item>
        <item>4.2 km</item>
    </string-array>

    <string-array name="date_1">
        <item>Senin, 10 Februari 2022</item>
        <item>Selasa, 20 Februari 2022</item>
        <item>Rabu, 25 Maret 2022</item>
        <item>Kamis, 09 Maret 2022</item>
        <item>Jum\'at, 15 Maret 2022</item>
    </string-array>

    <string-array name="date_2">
        <item>Rabu, 13 Februari 2022</item>
        <item>Jum\'at, 23 Februari 2022</item>
        <item>Kamis, 26 Maret 2022</item>
        <item>Sabtu,  11 Maret 2022</item>
        <item>Senin 18 Maret 2022</item>
    </string-array>

    <string-array name="time">
        <item>09.00</item>
        <item>11.00</item>
        <item>13.00</item>
        <item>14.00</item>
        <item>15.00</item>
    </string-array>

    <string-array name="info_dokter">
        <item>
            drg. Aan Afrianto adalah seorang Dokter Gigi Umum yang aktif melayani pasien di RSIA Tambak, Jakpus, Menteng, MDC Dental Care, Quality Dental Care Jatibening.
            drg. Aan Afrianto mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Gadjah Mada.
            Beliau yang tergabung dalam Persatuan Dokter Gigi Indonesia (PDGI) sebagai anggota ini bisa memberikan layanan konsultasi terkait Kesehatan Gigi Umum.
        </item>
        <item>
            drg. Aan Midad Arrizza adalah Dokter Gigi yang aktif melayani pasien di RS Medika Permata Hijau, Kebon Jeruk, Jakbar.
            drg. Aan Midad Arrizza mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Indonesia.
        </item>
        <item>
            drg. Abimanyu Bijaksono adalah Dokter Gigi yang aktif melayani pasien di Siloam Clinic Sunter, Tanjung priok, Jakut.
            drg. Abimanyu Bijaksono mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Prof. Dr. Moestopo (Beragama).
        </item>
        <item>
            drg. Achmad Fanfani adalah seorang Dokter Gigi Umum yang aktif melayani pasien di RS EMC Pulomas, Pulo Gadung, Jaktim.
            drg. Achmad Fanfani mendapatkan gelar kedokteran gigi setelah menamatkan pendidikan di Universitas Prof. DR. Moestopo (Beragama).
            Beliau yang tergabung dalam Persatuan Dokter Gigi Indonesia (PDGI)
        </item>
        <item>
           drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
            drg. Ade Chandra adalah Dokter Gigi yang aktif melayani pasien di Dent Smile Duren Sawit, Duren Sawit, Jaktim.
            drg. Ade Chandra mendapatkan gelar Kedokteran Gigi setelah menamatkan pendidikan di Universitas Sumatera Utara.
        </item>
    </string-array>
</resources>